# Solaris_Rewrite_V2

./: README.md  pyproject.toml
solaris/: __init__.py  __main__.py  config.py
solaris/bot/: __init__.py  bot.py
solaris/bot/extensions/: error.py  gateway.py  help.py  hub.py  meta.py  mod.py  modules.py  sudo.py  system.py  tags.py  warn.py
solaris/data/static/: build.sql
solaris/db/: __init__.py  db.py
solaris/utils/: __init__.py  checks.py  chron.py  converters.py  embed.py  loc.py  markdown.py  oauth_url.py  presence.py  ready.py  search.py  string.py  trips.py
solaris/utils/menu/: __init__.py  menus.py  selectors.py
solaris/utils/modules/: __init__.py  activate.py  config.py  deactivate.py  retrieve.py
