[tool.poetry]
name = "Blue Brain-Bot"
version = "0.1.0"
description = "A Discord bot designed to make your server a safer and better place."

license = "GPLv3"
repository = "https://github.com/parafoxia/Solaris"
readme = "README.md"

authors = [
    "Ethan Henderson <parafoxia@carberra.xyz>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hikari = {extras = ["speedups"], version = "^2.0.0.dev111"}
hikari-lightbulb = "^2.2.4"
python-dotenv = "^0.21.0"
toml = "^0.10.2"
uvloop = "^0.17.0"
PyYAML = "^6.0"
lxml = "^4.9.1"
markdownify = "^0.11.6"
py-stackexchange = "^2.2.7"
psutil = "^5.9.2"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.11.1"
six = "^1.16.0"
hikari-miru = "^1.1.2"
APScheduler = "^3.9.1"
pygount = "^1.4.0"
aiosqlite = "^0.17.0"
aiofiles = "^22.1.0"
rapidfuzz = "^2.11.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"

[tool.black]
line-length = 119
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
